@@ -6,6 +6,7 @@
 	* Restructure tx_srfeuserregister_display::getKeyAfterSave
 	* Require div2007 0.9.0
 	* Follow-up to bug #36165: Log warning to sysLog if localized label was not returned by div2007
+	* Fix bug #36306: Attachment fails with trunk version 2.7.0 producing fatal error in div2007
 
 2012-04-16 Stanislas Rolland  <typo3(arobas)sjbr.ca>
 	* Fix variable name in class.tx_srfeuserregister_control_main.php
